--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "-sprint-4-typescript-y-api",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc",
+    "start": "tsc && serve -s"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "typescript": "^4.9.5",
+    "serve": "^14.2.0"
   }
 }
