--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc && serve -s"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "serve": "^14.2.0"
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5"
   }
 }
